--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 python-dotenv>=0.19.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
 # Machine Learning & Data Science
 torch>=2.0.0
