--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ python-dotenv>=0.19.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
-# OpenAI
-openai>=1.0.0
+# API Requests
+requests>=2.31.0
 
 # PDF Processing
 PyPDF2>=3.0.0
