--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -9,20 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.460.0",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.2",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "@hookform/resolvers": "^3.0.0",
+    "axios": "^1.3.4",
+    "next": "13.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.17.6",
