--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ PyPDF2>=3.0.0
 
 # API Integrations
 PyGithub>=1.55
-python-linkedin>=2.0
 
 # Utilities
 python-dateutil>=2.8.2
@@ -20,3 +19,7 @@ regex>=2022.0.0
 
 # Type Hints
 typing-extensions>=4.0.0
+
+# ML/NLP
+spacy>=3.0.0
+scikit-learn>=1.0.0
