--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,16 @@
-# Core dependencies
-python-dotenv>=0.19.0
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-
-# API Requests
-requests>=2.31.0
-
-# PDF Processing
-PyPDF2>=3.0.0
-
-# API Integrations
-PyGithub>=1.55
-
-# Utilities
-python-dateutil>=2.8.2
-asyncio>=3.4.3
-regex>=2022.0.0
-
-# Type Hints
-typing-extensions>=4.0.0
-
-# ML/NLP
-spacy>=3.0.0
-scikit-learn>=1.0.0
+fastapi==0.109.1
+uvicorn==0.27.1
+python-multipart==0.0.9
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-dotenv==1.0.1
+pydantic==2.6.1
+PyJWT==2.8.0
+SQLAlchemy==2.0.27
+aiofiles==23.2.1
+requests==2.31.0
+beautifulsoup4==4.12.3
+pandas==2.2.0
+numpy==1.26.4
+scikit-learn==1.4.0
+nltk==3.8.1
